--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -43,7 +43,7 @@
               <img src="images/before1.jpg" alt="Before 1">
               <img src="images/before2.png" alt="Before 2">
               <img src="images/before3.jpg" alt="Before 3">
-              <img src="images/before4.PNG" alt="Before 4">
+              <img src="images/before4.jpg" alt="Before 4">
             </div>
           </div>
       
