--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/logo.png" alt="Logo" class="logo">
-            <h1 class="site-title">Taulut</h1>
+          <img src="images/logo.png" alt="Logo" class="logo" />
+          <h1>Taulut</h1>
         </div>
-    </header>
+      </header>
 
 <nav>
     <a href="index.html" class="active" aria-label="Go to Home">Koti</a>
@@ -86,7 +86,7 @@
           <img src="images/before1.jpg" alt="Before 1">
           <img src="images/before2.png" alt="Before 2">
           <img src="images/before3.jpg" alt="Before 3">
-          <img src="images/before4.jpg" alt="Before 4">
+          <img src="images/before4.png" alt="Before 4">
         </div>
       </div>
   
@@ -116,7 +116,7 @@
 </div>
 <main>
     <section class="about-section">
-        <img src="images/janne.jpg" alt="Portrait of John Doe">
+        <img src="images/janne.jpg" alt="Portrait">
         <h2>Janne Hakalahti</h2>
         <p>Janne on intohimoinen lintukuvaaja, joka viettää aikansa luonnossa ikuistaen lintujen kauneutta kamerallaan. </p>
         <p>Vapaa-ajallaan hän inspiroituu kuvistaan ja muuttaa ne eläviksi maalauksiksi, joissa yhdistyvät luonnon värit ja herkät yksityiskohdat.</p> 
