--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -12,10 +12,10 @@
 
     <header>
         <div class="header-content">
-            <img src="images/logo.png" alt="Logo" class="logo">
-            <h1 class="site-title">Tilaustyöt</h1>
+          <img src="images/logo.png" alt="Logo" class="logo" />
+          <h1>Taulut</h1>
         </div>
-    </header>
+      </header>
 
 <nav>
     <a href="index.html">Koti</a>
@@ -43,7 +43,7 @@
               <img src="images/before1.jpg" alt="Before 1">
               <img src="images/before2.png" alt="Before 2">
               <img src="images/before3.jpg" alt="Before 3">
-              <img src="images/before4.jpg" alt="Before 4">
+              <img src="images/before4.png" alt="Before 4">
             </div>
           </div>
       
@@ -66,18 +66,6 @@
 <footer>
     <p>&copy; 2025 Taulukauppa</p>
 </footer>
-
-<script>
-    function openModal(imageSrc) {
-        const modal = document.getElementById('imageModal');
-        const modalImage = document.getElementById('modalImage');
-        modal.style.display = 'flex';
-        modalImage.src = imageSrc;
-    }
-    function closeModal() {
-        document.getElementById('imageModal').style.display = 'none';
-    }
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
