--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 
     <header>
         <div class="header-content">
-            <img src="images/logo.png" alt="Logo" class="logo">
-            <h1 class="site-title">Ota yhteyttä</h1>
+          <img src="images/logo.png" alt="Logo" class="logo" />
+          <h1>Taulut</h1>
         </div>
-    </header>
+      </header>
 
 <nav>
     <a href="index.html">Koti</a>
