--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,22 +20,24 @@
 <nav>
     <a href="index.html">Koti</a>
     <a href="custom-paintings.html">Tilaustyöt</a>
+    <a href="birdhouses.html" aria-label="Learn more About">Linnunpöntöt</a>
     <a href="about.html" class="active">Yhteydenotot</a>
 </nav>
 
 <main>
+    
     <div class="contact">
         <h2>Ota yhteyttä</h2>
         <p>Kiinnostuitko tilaustöistä tai haluatko lisätietoja? Ota yhteyttä sähköpostitse tai puhelimitse!</p>
-        <p>Email: example@email.com</p>
-        <p>Puhelin: 123-456-789</p>
+        <p>Email: Janne.Hakalahti@gmail.com</p>
+        <p>Puhelin: 040 0700673</p>
     </div>
 
 </main>
 
 <footer>
-    <p>&copy; 2025 Taulukauppa</p>
+    <p>&copy; Janne Hakalahti</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
