--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,18 +20,18 @@
 <nav>
     <a href="index.html">Koti</a>
     <a href="custom-paintings.html" class="active">Tilaustyöt</a>
+    <a href="birdhouses.html" aria-label="Learn more About">Linnunpöntöt</a>
     <a href="about.html">Yhteydenotot</a>
 </nav>
 
 <main>
     <div>
         <section class="custom-info">
-            <p >
-                Tuo rakkaat muistosi eloon taideteoksena! 🎨📸<br> 
+            <p >Tuo rakkaat muistosi eloon taideteoksena! 🎨📸</p>
             <p>    Tilaa käsinmaalattu taulu suosikkivalokuvastasi ja tee hetkistäsi ikuisia. </p>
              <p>   Olipa kyseessä lemmikki, rakkaasi tai maisema, muunnamme valokuvasi upeaksi maalaukseksi huolella ja taidolla.</p>
                 <p> Jokainen teos on ainutlaatuinen ja tehty laadukkailla materiaaleilla. Tee kodistasi persoonallisempi ja tilaa oma taulusi jo tänään!</p>
-            </p>
+            
         </section>
     </div>
     <main>
@@ -64,7 +64,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Taulukauppa</p>
+    <p>&copy; Janne Hakalahti</p>
 </footer>
 <script src="script.js"></script>
 </body>
