--- a/birdhouses.html
+++ b/birdhouses.html
@@ -26,9 +26,8 @@
         <section class="birdhouse-description">
             <h2>Linnunpöntöt luonnon ystäville</h2>
             <p>
-                Tarjoamme käsintehtyjä linnunpönttöjä, jotka sopivat niin pihapiiriin kuin mökillekin. 
-                Jokainen pönttö on tehty huolella luonnonmateriaaleista ja suunniteltu tukemaan eri lintulajien pesintää.
-                Tilaa omasi ja auta lintuja löytämään turvallinen koti!
+                Valmistan pieniä eriä linnunpönttöjä puubetonista. Lentoaukon koot ovat 28 mm ja 32 mm. 
+                Linnut ovat ottaneet pöntöt hyvin vastaan, ja pesintöjä (mm. sinitiainen, pikkuvarpunen ja kirjosieppo) on havaittu useina kesinä.
             </p>
         </section>
 
