--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
     
     <div class="contact">
         <h2>Ota yhteyttä</h2>
-        <p>Kiinnostuitko tilaustöistä tai haluatko lisätietoja? Ota yhteyttä sähköpostitse tai puhelimitse!</p>
+        <p>Kiinnostuitko tilaustöistä tai haluatko lisätietoja? Ota yhteyttä sähköpostitse.</p>
         <p>Email: Janne.Hakalahti@gmail.com</p>
-        <p>Puhelin: 040 0700673</p>
+     <!--   <p>Puhelin: 040 0700673</p> -->
     </div>
 
 </main>
