--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-content">
           <img src="images/logo.png" alt="Logo" class="logo" />
-          <h1>Taulut</h1>
+          <h1>Yhteydenotot</h1>
         </div>
       </header>
 
