--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="gallery">
        
-        <div class="gallery-item"><img src="images/taulu1.jpg" alt="Painting 1"/>
+    <!--    <div class="gallery-item"><img src="images/taulu1.jpg" alt="Painting 1"/>
             <div class="description">
               <h3>Riekko</h3>
               <p>54x45cm</p>
