--- a/index.html
+++ b/index.html
@@ -238,19 +238,18 @@
     
 
     <div class="custom-info">
-      <p>Tuo rakkaat muistosi eloon taideteoksena! 🎨📸</p>
-      <p>Tilaa käsinmaalattu taulu suosikkivalokuvastasi ja tee hetkistäsi ikuisia.</p>
-      <p>Olipa kyseessä lemmikki, rakkaasi tai maisema, muunnamme valokuvasi upeaksi maalaukseksi huolella ja taidolla.</p>
-      <p>Jokainen teos on ainutlaatuinen ja tehty laadukkailla materiaaleilla. Tee kodistasi persoonallisempi ja tilaa oma taulusi jo tänään!</p>
+      <p>Maalaan myös tilauksesta taulun sinulle.</p>
+      <p>Maalaus voidaan tehdä valokuvan pohjalta esimerkiksi linnuista, maisemista tai lemmikseistä.</p>
+      <p>Käytän töissäni laadukkaita öljyvärejä ja kankaita.</p>
     </div>
 
     <section>
       <section class="about-section">
         <img src="images/janne.jpg" alt="Portrait"/>
         <h2>Janne Hakalahti</h2>
-        <p>Janne on intohimoinen lintukuvaaja, joka viettää aikansa luonnossa ikuistaen lintujen kauneutta kamerallaan.</p>
-        <p>Vapaa-ajallaan hän inspiroituu kuvistaan ja muuttaa ne eläviksi maalauksiksi, joissa yhdistyvät luonnon värit ja herkät yksityiskohdat.</p>
-        <p>Jannen töissä näkyy hänen syvä yhteytensä luontoon ja rakkaus lintuihin.</p>
+        <p>Jannen taulut ovat pääasiassa luontoaiheisia.</p>
+        <p>Lintuaiheita lienee enemmistö tauluista. Maisemat ja muutkin aihepiirit pääsevät toisinaan siveltimen alle.</p>
+        <p>Monien taulujen inspiraatio saa alkunsa Jannen omista luontokokemuksista.</p>
       </section>
     </section>
 
