--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -27,11 +27,9 @@
 <main>
     <div>
         <section class="custom-info">
-            <p >Tuo rakkaat muistosi eloon taideteoksena! 🎨📸</p>
-            <p>    Tilaa käsinmaalattu taulu suosikkivalokuvastasi ja tee hetkistäsi ikuisia. </p>
-             <p>   Olipa kyseessä lemmikki, rakkaasi tai maisema, muunnamme valokuvasi upeaksi maalaukseksi huolella ja taidolla.</p>
-                <p> Jokainen teos on ainutlaatuinen ja tehty laadukkailla materiaaleilla. Tee kodistasi persoonallisempi ja tilaa oma taulusi jo tänään!</p>
-            
+            <p>Maalaan myös tilauksesta taulun sinulle.</p>
+          <p>Maalaus voidaan tehdä valokuvan pohjalta esimerkiksi linnuista, maisemista tai lemmikseistä.</p>
+          <p>Käytän töissäni laadukkaita öljyvärejä ja kankaita.</p>     
         </section>
     </div>
     <main>
