--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -28,7 +28,7 @@
     <div>
         <section class="custom-info">
             <p>Maalaan myös tilauksesta taulun sinulle.</p>
-          <p>Maalaus voidaan tehdä valokuvan pohjalta esimerkiksi linnuista, maisemista tai lemmikseistä.</p>
+          <p>Maalaus voidaan tehdä valokuvan pohjalta esimerkiksi linnuista, maisemista tai lemmikeistä.</p>
           <p>Käytän töissäni laadukkaita öljyvärejä ja kankaita.</p>     
         </section>
     </div>
