--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <div class="contact">
         <h2>Ota yhteyttä</h2>
         <p>Kiinnostuitko tilaustöistä tai haluatko lisätietoja? Ota yhteyttä sähköpostitse.</p>
-        <p>Email: Janne.Hakalahti@gmail.com</p>
+        <p>Sähköposti: janne.hakalahti@gmail.com</p>
      <!--   <p>Puhelin: 040 0700673</p> -->
     </div>
 
