--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
       </header>
 
 <nav>
-    <a href="index.html">Koti</a>
-    <a href="custom-paintings.html">Tilaustyöt</a>
-    <a href="birdhouses.html" aria-label="Learn more About">Linnunpöntöt</a>
-    <a href="about.html" class="active">Yhteydenotot</a>
+    <a href="./">Koti</a>
+    <a href="./custom-paintings">Tilaustyöt</a>
+    <a href="./birdhouses" aria-label="Learn more About">Linnunpöntöt</a>
+    <a href="./about" class="active">Yhteydenotot</a>
 </nav>
 
 <main>
