--- a/custom-paintings.html
+++ b/custom-paintings.html
@@ -18,10 +18,10 @@
       </header>
 
 <nav>
-    <a href="index.html">Koti</a>
-    <a href="custom-paintings.html" class="active">Tilaustyöt</a>
-    <a href="birdhouses.html" aria-label="Learn more About">Linnunpöntöt</a>
-    <a href="about.html">Yhteydenotot</a>
+    <a href="./">Koti</a>
+    <a href="./custom-paintings" class ="active">Tilaustyöt</a>
+    <a href="./birdhouses" aria-label="Learn more About">Linnunpöntöt</a>
+    <a href="./about">Yhteydenotot</a>
 </nav>
 
 <main>
