--- a/birdhouses.html
+++ b/birdhouses.html
@@ -16,10 +16,10 @@
     </header>
 
     <nav>
-        <a href="index.html" aria-label="Go to Home">Koti</a>
-        <a href="custom-paintings.html" aria-label="Custom Made Paintings">Tilaustyöt</a>
-        <a href="birdhouses.html" class="active" aria-label="Birdhouses">Linnunpöntöt</a>
-        <a href="about.html" aria-label="Contact">Yhteydenotot</a>
+      <a href="./" aria-label="Go to Home">Koti</a>
+        <a href="./custom-paintings" aria-label="Custom Made Paintings">Tilaustyöt</a>
+        <a href="./birdhouses" class="active" aria-label="Birdhouses">Linnunpöntöt</a>
+        <a href="./about" aria-label="Contact">Yhteydenotot</a>
     </nav>
 
     <main>
