--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
       </header>
 
 <nav>
-    <a href="./">Koti</a>
-    <a href="./custom-paintings">Tilaustyöt</a>
-    <a href="./birdhouses" aria-label="Learn more About">Linnunpöntöt</a>
-    <a href="./about" class="active">Yhteydenotot</a>
+     <a href="./" aria-label="Go to Home">Koti</a>
+        <a href="./custom-paintings" aria-label="Custom Made Paintings">Tilaustyöt</a>
+        <a href="./birdhouses" aria-label="Birdhouses">Linnunpöntöt</a>
+        <a href="./about" class="active" aria-label="Contact">Yhteydenotot</a>
 </nav>
 
 <main>
