--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
 
     <nav>
-      <a href="index.html" class="active" aria-label="Go to Home">Koti</a>
-      <a href="custom-paintings.html" aria-label="Custom Made Paintings">Tilaustyöt</a>
-      <a href="birdhouses.html" aria-label="Birdhouses">Linnunpöntöt</a>
-      <a href="about.html" aria-label="Contact">Yhteydenotot</a>
+       <a href="./" class="active" aria-label="Go to Home">Koti</a>
+        <a href="./custom-paintings" aria-label="Custom Made Paintings">Tilaustyöt</a>
+        <a href="./birdhouses" aria-label="Birdhouses">Linnunpöntöt</a>
+        <a href="./about" aria-label="Contact">Yhteydenotot</a>
     </nav>
 
     <main>
