--- a/index.html
+++ b/index.html
@@ -203,6 +203,22 @@
               <p>Öljymaalaus</p>
             </div>
           </div>
+
+           <div class="gallery-item"><img src="images/taulu24.jpg" alt="Painting 24"/>
+            <div class="description">
+             <h3>Ilta</h3>
+              <p>45x30cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
+
+           <div class="gallery-item"><img src="images/taulu25.jpg" alt="Painting 25"/>
+            <div class="description">
+             <h3>Joutsen</h3>
+              <p>85x60cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
         
       </div>
     </main>
