--- a/index.html
+++ b/index.html
@@ -220,6 +220,14 @@
             </div>
           </div>
         
+         <div class="gallery-item"><img src="images/taulu26.jpg" alt="Painting 26"/>
+            <div class="description">
+             <h3>Nuolihaukka</h3>
+              <p>42x30cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
+        
       </div>
     </main>
 
@@ -248,3 +256,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
