--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
               <p>Öljymaalaus</p>
             </div>
           </div>
+
+        <div class="gallery-item"><img src="images/taulu27.jpg" alt="Painting 27"/>
+            <div class="description">
+             <h3>Metso</h3>
+              <p>68x60cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
         
       </div>
     </main>
@@ -256,4 +264,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
