--- a/index.html
+++ b/index.html
@@ -235,6 +235,22 @@
               <p>Öljymaalaus</p>
             </div>
           </div>
+
+        <div class="gallery-item"><img src="images/taulu28.jpg" alt="Painting 28"/>
+            <div class="description">
+             <h3>Susi</h3>
+              <p>45x60cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
+
+        <div class="gallery-item"><img src="images/taulu29.jpg" alt="Painting 29"/>
+            <div class="description">
+             <h3>Lapinpöllö</h3>
+              <p>45x85cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
         
       </div>
     </main>
@@ -264,5 +280,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
