--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <nav>
      <a href="./" aria-label="Go to Home">Koti</a>
         <a href="./custom-paintings" aria-label="Custom Made Paintings">Tilaustyöt</a>
-        <a href="./birdhouses" aria-label="Birdhouses">Linnunpöntöt</a>
+       <!-- <a href="./birdhouses" aria-label="Birdhouses">Linnunpöntöt</a> -->
         <a href="./about" class="active" aria-label="Contact">Yhteydenotot</a>
 </nav>
 
@@ -41,3 +41,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
