--- a/index.html
+++ b/index.html
@@ -221,10 +221,18 @@
             </div>
           </div>
 
-          <div class="gallery-item"><img src="images/taulu33.jpg" alt="Painting 29"/>
+          <div class="gallery-item"><img src="images/taulu33.jpg" alt="Painting 33"/>
             <div class="description">
              <h3>Suojaväritys</h3>
               <p>25x100cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
+
+           <div class="gallery-item"><img src="images/taulu34.jpg" alt="Painting 34"/>
+            <div class="description">
+             <h3>Pala Mäntyä</h3>
+              <p>30x65cm</p>
               <p>Öljymaalaus</p>
             </div>
           </div>
