--- a/index.html
+++ b/index.html
@@ -135,13 +135,7 @@
               <p>Öljymaalaus</p>
             </div>
           </div>
-          <div class="gallery-item"><img src="images/taulu19.jpg" alt="Painting 19"/>
-            <div class="description">
-              <h3>Suopursumetsä</h3>
-              <p>100x68cm</p>
-              <p>Öljymaalaus</p>
-            </div>
-          </div>
+          
           <div class="gallery-item"><img src="images/taulu20.jpg" alt="Painting 20"/>
             <div class="description">
               <h3>Kotka</h3>
@@ -236,6 +230,14 @@
               <p>Öljymaalaus</p>
             </div>
           </div>
+
+           <div class="gallery-item"><img src="images/taulu35.jpg" alt="Painting 35"/>
+            <div class="description">
+             <h3>Pyytölamminoja</h3>
+              <p>60x45cm</p>
+              <p>Öljymaalaus</p>
+            </div>
+          </div>
         
       </div>
 
@@ -288,6 +290,12 @@
                <h3>Västäräkki</h3>
             </div>
           </div> 
+           <div class="gallery-item sold">
+            <img src="images/taulu19.jpg" alt="Painting 19"/>
+            <div class="description">
+              <h3>Suopursumetsä</h3>
+            </div>
+          </div>
     </div>
     </main>
 
